Part 3/Exercise 3.08/Project-serve-v1.5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: PROJECT/IMAGE2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "350m"
            memory: "300Mi"
