Part 3/Exercise 3.08/Project-serve-v1.5/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2346
